kqed/src/objects/Shipment_Line__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Line_Item_ID__c</fullName>
        <label>Opportunity Line Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Premium/Benefit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Shipment Line</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Shipment Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_Cannot_Be_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Product__c)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>The Product cannot be changed once entered in a Shipment Line.</errorMessage>
    </validationRules>
</CustomObject>